--- a/index.html
+++ b/index.html
@@ -233,5 +233,10 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src="js/utils.js"></script>
+  <script src="js/debounce.js"></script>
+  <script src="js/backendAPI.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
